agregacion de seccion proyetos

--- a/pages/proyetos.html
+++ b/pages/proyetos.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <h2>Mis Proyectos</h2>
+    <h1>Titulo1</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis impedit eligendi culpa vero, delectus dolore
+        dolorum ab nobis odit cumque debitis, repudiandae pariatur beatae doloremque reiciendis nihil molestiae veniam
+        veritatis!Loremlo
+    </p>
+    <h1>Titulo2</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore laboriosam quas, debitis quisquam asperiores
+        corporis ex repudiandae iure expedita saepe porro praesentium enim consectetur molestias voluptates accusamus.
+        Exercitationem, repellendus voluptates?
+    </p>
+    <table>
+        <thead>
+            <tr>
+                <th>año</th>
+            
+                <th>experiencia</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>2020</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus dicta, ab modi corrupti
+                    aspernatur reiciendis nemo distinctio quod tenetur, libero, ad laborum optio amet ut. Eum facere est
+                    repudiandae quae.
+                </td>
+            </tr>
+            <tr>
+                <td>2021</td>
+                <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia molestias eos obcaecati commodi
+                    odio nobis eius labore nesciunt saepe, consequatur ab nostrum architecto cupiditate praesentium
+                    fugiat possimus nam ullam quasi!
+                </td>
+            </tr>
+            <tr>
+                <td>2022</td>
+                <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat asperiores in exercitationem
+                    blanditiis quo dolorum deserunt culpa numquam mollitia, eum dicta suscipit ratione, quas ex est,
+                    adipisci vel voluptatum deleniti.
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </body>
+
 </html>
