cambios minimos de informacion en index y proyetos

--- a/pages/proyetos.html
+++ b/pages/proyetos.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mis Proyectos</title>
 </head>
 
 <body>
     <h2>Mis Proyectos</h2>
-    <h1>Titulo1</h1>
+    <h3>Titulo1</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis impedit eligendi culpa vero, delectus dolore
         dolorum ab nobis odit cumque debitis, repudiandae pariatur beatae doloremque reiciendis nihil molestiae veniam
         veritatis!Loremlo
     </p>
-    <h1>Titulo2</h1>
+    <h3>Titulo2</h3>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore laboriosam quas, debitis quisquam asperiores
         corporis ex repudiandae iure expedita saepe porro praesentium enim consectetur molestias voluptates accusamus.
         Exercitationem, repellendus voluptates?
