--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Proyecto echo en html5 Por Fernando Cor.."/>
+    <meta name="keywords" content="html, css, javascript, fullstack">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="language" content="es">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My pagina web</title>
 </head>
 
 <body>
+    <!-- Seccion de informacion personal -->
     <h2>Sobre Mi</h2>
-    <img src="https://picsum.photos/id/684/600/400" alt="">
+    <img src="https://picsum.photos/id//600/400" alt="">
     <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut ex adipisci iusto vel corrupti culpa illo
         reiciendis officiis doloribus at asperiores voluptate, et nemo, tenetur repudiandae eaque alias quasi nam!</p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis amet, fugit iusto neque repellendus commodi
@@ -31,6 +35,9 @@
         </li>
         <li>dato</li>
     </ul>
+    <hr>
+    <!-- Seccion de proyectos -->
+    <a href="./pages/proyetos.html">Mis Proyectos</a>
 </body>
 
 </html>
